--- a/src/app/moons-planets/moons-planets.component.css
+++ b/src/app/moons-planets/moons-planets.component.css
@@ -1,6 +1,6 @@
 svg {
-    height : 100vh;
-    width : auto
+    width : 100%;
+    height : auto;
 }
 /* 
 svg {
